--- a/settings.gradle
+++ b/settings.gradle
@@ -5,9 +5,9 @@ pluginManagement {
         mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
-        maven {
-            url = uri("https://repo.spring.io/release")
-        }
+//        maven {
+//            url = uri("https://repo.spring.io/release")
+//        }
         maven {
             url = uri("https://repository.jboss.org/maven2")
         }
@@ -20,9 +20,9 @@ dependencyResolutionManagement {
         mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
-        maven {
-            url = uri("https://repo.spring.io/release")
-        }
+//        maven {
+//            url = uri("https://repo.spring.io/release")
+//        }
         maven {
             url = uri("https://repository.jboss.org/maven2")
         }
