--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     implementation 'com.google.dagger:hilt-android:2.41'
     kapt 'com.google.dagger:hilt-compiler:2.41'
     implementation 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+
+    //appwrite
+    implementation("io.appwrite:sdk-for-android:0.5.0")
 }
