Modific: se cambio los textos por los del archivo string, la funcion de atras

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,7 @@ dependencies {
 
     //appwrite
     implementation("io.appwrite:sdk-for-android:0.5.0")
+    //circular progress bar
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
 }
