Modific:Arreglando errores de compilacion

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,31 +2,43 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
+        jcenter()
         mavenCentral()
-        maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
-//        maven {
-//            url = uri("https://repo.spring.io/release")
-//        }
+        maven { url 'https://maven.google.com' }
         maven {
-            url = uri("https://repository.jboss.org/maven2")
+            url = uri("https://repo.spring.io/release")
         }
+//        maven {
+//            url = uri("https://repository.jboss.org/maven2")
+//        }
+//        maven {
+//            url = uri("http://repo.mycompany.com/maven2")
+//        }
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
-        google()
-        mavenCentral()
+//        google()
+//        mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
-//        maven {
-//            url = uri("https://repo.spring.io/release")
-//        }
         maven {
-            url = uri("https://repository.jboss.org/maven2")
+            url = uri("https://repo.spring.io/release")
         }
+//        maven {
+//            url = uri("https://repository.jboss.org/maven2")
+//        }
+//        maven {
+//            url = uri("http://repo.mycompany.com/maven2")
+//        }
+        google()
+        jcenter()
+        mavenCentral()
     }
 }
+
 rootProject.name = "Gmemory"
 include ':app'
