--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
     kapt {
         correctErrorTypes true
+        generateStubs = true
     }
 
     buildTypes {
@@ -46,6 +47,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -86,12 +88,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //Daget hilt
     implementation 'com.google.dagger:hilt-android:2.41'
-    kapt 'com.google.dagger:hilt-compiler:2.41'
+    kapt 'com.google.dagger:hilt-android-compiler:2.41'
     implementation 'com.google.dagger:hilt-android-gradle-plugin:2.41'
-
-    //appwrite
-    implementation("io.appwrite:sdk-for-android:0.5.0")
-    //circular progress bar
-    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
 }
